<resources>
    <string name="app_name">Characters</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="cancel">Отмена</string>
    <string name="error">Error</string>
    <string name="search">Поиск</string>
    <string name="action_search">search</string>
    <string name="birthday">birthday:</string>
    <string name="nickname">nickname:</string>
    <string name="status">status:</string>
    <string name="portrayed">portrayed:</string>
    <string name="night_mode_title">Dark theme</string>
    <string name="night_mode_button_dark">Dark mode</string>
    <string name="night_mode_button_light">Light mode</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">light mode</string>
    <string name="fragment_list_title">Home</string>
    <string name="fragment_favorite_title">Favorite</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="settings_switch_thme_mode">Theme mode</string>
    <string name="settings_switch_theme_mode">Theme  mode</string>
    <string name="settings_designed">Designed by Andrei Leushin</string>
    <string name="settings_app_version">App  version</string>
    <string name="list_empty">empty favorite list</string>
    <string name="details_birthday">Birthday</string>
    <string name="details_status">Status</string>
    <string name="details_nickname">Nickname</string>
    <string name="details_portrayed">Portrayed</string>
    <string name="details_category">Category</string>
    <string name="fragment_map_title">Map</string>
</resources>